--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
         }
 
         #generate-btn,
-        #print-btn {
+        #print-btn,
+        #clear-btn {
             padding: 10px 20px;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             font-size: 16px;
+            margin: 0 5px;
         }
 
         #generate-btn {
@@ -46,18 +48,25 @@
 
         #print-btn {
             background-color: #4CAF50;
-            margin-top: 10px;
         }
 
         #print-btn:hover {
             background-color: #45a049;
         }
 
+        #clear-btn {
+            background-color: #f44336;
+        }
+
+        #clear-btn:hover {
+            background-color: #d32f2f;
+        }
+
         .qr-code-container {
             margin: 20px auto;
             padding: 20px;
             max-width: 300px;
-            /* border: 1px solid #eee; */
+            /* border:1px solid #ccc; */
         }
 
         /* 打印样式 - 只打印二维码 */
@@ -94,6 +103,7 @@
             <input type="text" id="qr-content" placeholder="输入要生成二维码的内容">
             <button id="generate-btn">生成二维码</button>
             <button id="print-btn">打印二维码</button>
+            <button id="clear-btn">清空</button>
         </div>
 
         <div class="qr-code-container">
@@ -121,9 +131,12 @@
             colorLight: "#ffffff",
             correctLevel: QRCode.CorrectLevel.H
         });
+    }
 
-        // 生成后清空输入框
+    // 清空功能
+    function clearAll() {
         document.getElementById('qr-content').value = '';
+        document.getElementById('qrcode').innerHTML = '';
     }
 
     // 绑定事件
@@ -135,6 +148,7 @@
         }
         window.print();
     });
+    document.getElementById('clear-btn').addEventListener('click', clearAll);
 
     // 按回车键也可以生成二维码
     document.getElementById('qr-content').addEventListener('keypress', function (e) {
